<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BDD8F1"
    tools:context=".fragments.SignUpFragment">

    <TextView
        android:id="@+id/txtSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="24dp"
        android:text="@string/sign_up"

        android:textSize="32sp"
        android:fontFamily="@font/mont_extralight"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </TextView>


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardEmailAdd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="100dp"
        app:cardCornerRadius="8dp"
        android:elevation="8dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:fontFamily="@font/mont_extralight"
                android:textStyle="bold"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:paddingBottom="14dp">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="16dp"
        app:cardCornerRadius="8dp"
        android:elevation="8dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintTop_toBottomOf="@id/cardEmailAdd">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:passwordToggleEnabled="true"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:fontFamily="@font/mont_extralight"
                android:textStyle="bold"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:paddingBottom="14dp">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardConfirmPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="16dp"
        app:cardCornerRadius="8dp"
        android:elevation="8dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintTop_toBottomOf="@id/cardPassword">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:passwordToggleEnabled="true"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:fontFamily="@font/mont_extralight"
                android:textStyle="bold"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:paddingBottom="14dp">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="10dp"
        android:clickable="true"
        app:backgroundTint="#82A6CB"
        android:src="@drawable/next"
        app:maxImageSize="28dp"
        app:fabCustomSize="45dp"
        app:layout_constraintEnd_toEndOf="@+id/cardConfirmPassword"
        app:layout_constraintTop_toBottomOf="@+id/cardConfirmPassword"/>

    <TextView
        android:id="@+id/txtAlrReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/already_registered"
        android:fontFamily="@font/mont_extralight"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toStartOf="@+id/cardConfirmPassword"
        app:layout_constraintTop_toBottomOf="@+id/cardConfirmPassword">
    </TextView>

    <TextView
        android:id="@+id/txtRegged"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/hyperlink"
        android:textSize="15sp"
        android:text="@string/sign_in"
        android:fontFamily="@font/mont_extralight"
        android:textStyle="bold"
        android:layout_marginStart="5dp"
        app:layout_constraintStart_toEndOf="@+id/txtAlrReg"
        app:layout_constraintTop_toTopOf="@+id/txtAlrReg">
    </TextView>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtRegged"
        android:layout_marginBottom="50dp"
        android:indeterminateTint="@color/white"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>


